[project]
name = "ai-agent-devops-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
]
